# purine2

./: CMakeLists.txt  LICENSE  README.md
CMakeScripts/: FindLibUV.cmake
caffeine/: caffeine.hpp  cudnn.hpp  im2col.cpp  im2col.cu  im2col.hpp  io.cpp  io.hpp  math_functions.cpp  math_functions.cu  math_functions.hpp
caffeine/proto/: CMakeLists.txt  caffe.proto
common/: common.cpp  common.hpp  cuda.cpp  cuda.hpp  cudnn_v1.cpp  cudnn_v1.hpp  loop.cpp  loop.hpp
composite/: composite.hpp  composite_graph.cpp  composite_graph.hpp  connectable.cpp  connectable.hpp  layer.cpp  layer.hpp  vectorize.hpp
composite/graph/: acc.hpp  aggregate.hpp  all_reduce.hpp  compute_loss.hpp  concat.cpp  concat.hpp  copy.cpp  copy.hpp  data_parallel.hpp  fetch_image.cpp  fetch_image.hpp  split.cpp  split.hpp  update.cpp  update.hpp
composite/layers/: activation_layer.hpp  concat_layer.hpp  conv_layer.hpp  dropout_layer.hpp  global_average_layer.hpp  inception.hpp  inner_prod_layer.hpp  lrn_layer.hpp  nin_layer.hpp  pool_layer.hpp  softmax_layer.hpp  softmaxloss_layer.hpp  split_layer.hpp
dispatch/: blob.cpp  blob.hpp  graph.cpp  graph.hpp  graph_template.hpp  looper.cpp  looper.hpp  node.cpp  node.hpp  op.cpp  op.hpp  op_template.hpp  runnable.cpp  runnable.hpp
examples/: CMakeLists.txt  googlenet.cpp  googlenet.hpp  googlenet_test.cpp  googlenet_timing.cpp  nin_cifar10.cpp  nin_cifar10.hpp  nin_cifar10_test.cpp
graph/: blob.cpp  blob.hpp  dispatcher.cpp  dispatcher.hpp  graph.cpp  graph.hpp  graph_template.hpp  layer.cpp  layer.hpp  node.cpp  node.hpp  op.cpp  op.hpp  op_template.hpp
operations/: cudnn.hpp  operation.hpp  size.hpp  tensor.cpp  tensor.hpp
operations/include/: accuracy.hpp  activation.hpp  bias.hpp  conv.hpp  copy.hpp  dummy.hpp  eltwise.hpp  image_label.hpp  inner.hpp  lrn.hpp  mem_copy.hpp  mpi.hpp  pool.hpp  random.hpp  softmax.hpp
operations/src/: accuracy.cpp  activation.cpp  bias.cpp  conv.cpp  copy.cpp  dummy.cpp  eltwise.cpp  image_label.cpp  inner.cpp  lrn.cu  mem_copy.cpp  mpi.cpp  pool.cpp  random.cpp  softmax.cpp
tests/: CMakeLists.txt  test_common.cpp  test_composite_graphs.cpp  test_copy.cpp  test_graph.cpp  test_inception.cpp  test_layers.cpp  test_loop.cpp  test_main.cpp  test_mpi.cpp  test_split_concat.cpp
